--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -329,7 +329,6 @@
         /* 你可以根据需要调整高度 */
         overflow-y: auto;
     }
-
 </style>
 
 <div class="container-fluid" style="height: 100vh;">
@@ -1133,7 +1132,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">User</th>
-                                <th scope="col">Load overall times</th>
+                                <th scope="col">Load times</th>
                                 <th scope="col">Last time load</th>
                             </tr>
                         </thead>
