--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -405,11 +405,6 @@
                                 to display a measurement in µm.</small>
                         </div>
 
-                        <div class="form-group col-12">
-                            <label class="form-label" for="annFontNumber">Annotation Font Scaling</label>
-                            <input id="annFontNumber" class="form-control ml-2 col-4" type="number" min="0.5" max="3"
-                                step=".25" value="1" disabled>
-                        </div>
 
                         <div class="form-group col-12">
                             <input id="pixelBox" class="ml-2 form-check-input" type="checkbox" disabled>
@@ -443,34 +438,44 @@
                 </div>
 
                 <div id="annCard" class="card-body tab-pane">
-                    <div class="row">
+                    <div class="form-group col-12">
                         <button id="createAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Create
                             Annotation</button>
                     </div>
-                    <div class="row">
-                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary col-11" disabled
-                            style="width: 60px;">Hide Annotations</button>
+                    <div class="form-group col-12">
+                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Hide
+                            Annotations</button>
                     </div>
 
-                    <hr class="m-1" />
-                    <div style="overflow: scroll; max-height: 200px;">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th scope="col"></th>
-                                    <th scope="col">Text</th>
-                                    <th scope="col">Plane</th>
-                                    <th scopr="col">Slice</th>
-                                    <th scope="col">Instance</th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">User</th>
-                                </tr>
-                            </thead>
-                            <tbody id="annTbody">
-                            </tbody>
-                        </table>
+                    <div class="form-group col-12">
+                        <hr class="m-1" />
+                        <div style="overflow: scroll; max-height: 200px;">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"></th>
+                                        <th scope="col">Text</th>
+                                        <th scope="col">Plane</th>
+                                        <th scopr="col">Slice</th>
+                                        <th scope="col">Instance</th>
+                                        <th scope="col">Date</th>
+                                        <th scope="col">User</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="annTbody">
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
+
+                    <div class="form-group col-12 d-flex align-items-center">
+                        <label class="form-label" for="annFontNumber">Annotation Font Scaling</label>
+                        <input id="annFontNumber" class="form-control ml-2" type="number" min="0.5" max="3" step=".25"
+                            value="1" disabled>
+                    </div>
+
                 </div>
+
                 <div id="viewCard" class="card-body tab-pane">
                     <p>This will save the camera viewport, slice, and image type to be able to return to.
                     </p>
