--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -261,7 +261,7 @@
                         <!-- Organization list container -->
                         <div class="col-3">
                             <h5>Institution List</h5>
-                            <div id="institutionList" class="table table-striped table-hover"></div>
+                            <div id="institutionList" class="table"></div>
                             <button id="newInstitutionBtn" class="btn btn-sm btn-primary btn-icon-only">New</button>
                         </div>
                         <!-- Organization details container -->
