--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -4,36 +4,23 @@
 <head>
     <style>
         .selected-user,
-        .selected-dataset {
+        .selected-dataset,
+        .selected-inst {
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
-            background-color: #007bff;
+            background-color: #2b2b2b;
             /* 蓝色背景 */
             color: white;
             /* 白色文字 */
         }
 
-        #datasetList,
-        #assignedDatasets {
-            max-height: 300px;
-            overflow-y: auto;
-        }
 
         .selectable-user:hover,
         li:hover {
             cursor: pointer;
-            background-color: #f5f5f5;
-        }
-
-        #datasetList {
-            border: 1px solid #dee2e6;
-            border-radius: 5px;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 0;
-            margin-top: 20px;
+            background-color: #b3b3b3;
         }
 
         .list-group {
@@ -55,8 +42,10 @@
         }
 
         .list-group-item.selected-user:hover,
-        .list-group-item.selected-dataset:hover {
-            background-color: #0056b3;
+        .list-group-item.selected-dataset:hover,
+        .list-group-item.selected-inst:hover {
+            cursor: pointer;
+            background-color: #303030;
             /* 悬浮时更暗的蓝色 */
         }
 
@@ -68,6 +57,12 @@
 
         .scrollable-table {
             max-height: 170px;
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
+
+        .scrollable-table-inst {
+            max-height: 400px;
             overflow-y: auto;
             overflow-x: hidden;
         }
@@ -136,6 +131,7 @@
         }
     </style>
 </head>
+
 <div class="container-fluid">
     <div class="row" style="margin-top: 70px;">
         <!-- View Users-->
@@ -217,13 +213,13 @@
 
 
                 <div class="row" style="margin-top: -10px;">
-                    <div class="col-md-3">
+                    <div class="col-md-5">
                         <div class="card border-0">
                             <div class="card-body">
                                 <h5 class="card-title">Dataset List</h5>
                                 <div class="scrollable-table">
                                     <table class="table">
-                                        <div id="datasetList" class="table table-striped table-hover"></div>
+                                        <div id="datasetList"></div>
                                     </table>
                                 </div>
                             </div>
@@ -241,11 +237,16 @@
                             </button>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="card border-0">
+                            <h5 id="assignedDatasetsTitle" class="card-title"></h5>
                             <div class="card-body">
-                                <h5 id="assignedDatasetsTitle" class="card-title">Assigned Datasets for </h5>
-                                <ul id="assignedDatasets" class="list-group"></ul>
+                                <!-- <ul id="assignedDatasets" class="list-group"></ul> -->
+                                <div class="scrollable-table">
+                                    <table class="table">
+                                        <div id="assignedDatasets"></div>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -261,7 +262,7 @@
                         <!-- Organization list container -->
                         <div class="col-3">
                             <h5>Institution List</h5>
-                            <div id="institutionList" class="table"></div>
+                            <div id="institutionList" class="scrollable-table-inst"></div>
                             <button id="newInstitutionBtn" class="btn btn-sm btn-primary btn-icon-only">New</button>
                         </div>
                         <!-- Organization details container -->
@@ -420,7 +421,7 @@
     }
 
     function handleSelectedUser(selectedUserEmail) {
-        assignedDatasetsTitle.textContent = `Assigned Datasets for ${selectedUserEmail}`;
+        assignedDatasetsTitle.textContent = `${selectedUserEmail}`;
         const assignedDatasets = document.getElementById('assignedDatasets');
         // Empty the current datasets list
         assignedDatasets.innerHTML = '';
@@ -642,17 +643,17 @@
             item.onclick = () => {
                 // Remove 'selected' class from all items
                 document.querySelectorAll('#institutionList .list-group-item').forEach(el => {
-                    el.classList.remove('selected');
+                    el.classList.remove('selected-inst');
                 });
                 // Add 'selected' class to clicked item
-                item.classList.add('selected');
+                item.classList.add('selected-inst');
                 showInstitutionDetails(institution);
             };
             institutionList.appendChild(item);
 
             // Automatically select the first institution only if no current selection is stored
             if (index === 0 && !currentSelectedInstitutionName) {
-                item.classList.add('selected');
+                item.classList.add('selected-inst');
                 showInstitutionDetails(institution);
             }
         });
@@ -771,7 +772,7 @@
                     <div class="orders list-group">
                         ${ordersListHTML}
                     </div>
-                    <div id="orderDetails" class="order-details"></div>
+                    <div id="orderDetails" class="order-details class="scrollable-table""></div>
                 </div>
             </div>
 
