--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -864,12 +864,15 @@
                                                     class="mx-1 fa-lg fas fa-step-forward"></i></button>
                                         </div>
 
-                                        <div id="sliceDiv" class="form-group mb-2 d-flex"
-                                            style="flex: 1; align-items: center;">
-                                            <label for="sliceInput" class="mb-0">Slice Navigator: </label>
-                                            <input id="sliceInput" class="mx-1 form-control" type="number" max="700"
+                                        <div id="sliceDiv" class="form-group mb-2 d-flex align-items-center"
+                                            style="flex: 1;">
+                                            <label for="sliceInput" class="mb-0" style="margin-right: 10px;">Slice
+                                                Navigator:</label>
+                                            <input id="sliceInput" class="form-control" type="number" max="700"
                                                 disabled>
                                         </div>
+
+
 
                                         <div id="sliderDiv" class="form-group mb-2" style="flex: 1;">
                                             <input id="sliceRange" class="form-control-range mt-3" type="range"
