--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -438,15 +438,12 @@
                 </div>
 
                 <div id="annCard" class="card-body tab-pane">
-                    <div class="form-group col-12">
-                        <button id="createAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Create
-                            Annotation</button>
-                    </div>
-                    <div class="form-group col-12">
-                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Hide
+                    <div class="form-group col-12 d-flex justify-content-between">
+                        <button id="createAnnBtn" type="button" class="btn btn-secondary" disabled>Create
+                            Annotations</button>
+                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary" disabled>Hide
                             Annotations</button>
                     </div>
-
                     <div class="form-group col-12">
                         <hr class="m-1" />
                         <div style="overflow: scroll; max-height: 200px;">
@@ -469,7 +466,7 @@
                     </div>
 
                     <div class="form-group col-12 d-flex align-items-center">
-                        <label class="form-label" for="annFontNumber">Annotation Font Scaling</label>
+                        <label class="form-label ml-2" for="annFontNumber">Font Scaling</label>
                         <input id="annFontNumber" class="form-control ml-2" type="number" min="0.5" max="3" step=".25"
                             value="1" disabled>
                     </div>
