--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -10,7 +10,7 @@
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
-            background-color: #2b2b2b;
+            background-color: #447fff;
             /* 蓝色背景 */
             color: white;
             /* 白色文字 */
@@ -32,7 +32,7 @@
         .list-group-item {
             display: block;
             padding: 10px 15px;
-            border-bottom: 1px solid #f0f0f0;
+            /* border-bottom: 1px solid #f0f0f0; */
             cursor: pointer;
             transition: background-color 0.2s ease-in-out;
         }
@@ -45,7 +45,8 @@
         .list-group-item.selected-dataset:hover,
         .list-group-item.selected-inst:hover {
             cursor: pointer;
-            background-color: #303030;
+            background-color: #447fff;
+            color: white;
             /* 悬浮时更暗的蓝色 */
         }
 
@@ -210,8 +211,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="row" style="margin-top: -10px;">
                     <div class="col-md-5">
                         <div class="card border-0">
