--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -48,21 +48,6 @@
         /* chrome-fix */
     }
 
-    .spinner {
-        height: 60px;
-        width: 60px;
-        margin: auto;
-        display: flex;
-        -webkit-animation: rotation .6s infinite linear;
-        -moz-animation: rotation .6s infinite linear;
-        -o-animation: rotation .6s infinite linear;
-        animation: rotation .6s infinite linear;
-        border-left: 6px solid rgba(0, 174, 239, .15);
-        border-right: 6px solid rgba(0, 174, 239, .15);
-        border-bottom: 6px solid rgba(0, 174, 239, .15);
-        border-top: 6px solid rgba(0, 174, 239, .8);
-        border-radius: 100%;
-    }
 
     @-webkit-keyframes rotation {
         from {
@@ -225,7 +210,6 @@
     .my-container {
         /* margin-left: 320px; */
         /* 留出足够的空间给左侧的 toolsCol */
-        overflow-y: auto;
         /* 允许在需要时垂直滚动 */
         height: calc(100vh - 50px);
         /* 减去导航栏的高度，如果你希望 my-container 高度撑满剩余的视口 */
@@ -361,16 +345,6 @@
         flex-grow: 1;
     }
 
-    /* .btn-primary {
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    } */
-
     .btn-primary:disabled {
         background-color: #6c757d;
         cursor: not-allowed;
@@ -501,10 +475,8 @@
                 <div id="annCard" class="card-body tab-pane">
 
                     <div class="form-group col-12 d-flex justify-content-between">
-                        <button id="createAnnBtn" type="button" class="btn btn-secondary" disabled>Create
-                            Annotations</button>
-                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary" disabled>Hide
-                            Annotations</button>
+                        <button id="createAnnBtn" type="button" class="btn btn-secondary" disabled>Create Annotations</button>
+                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary" disabled>Hide Annotations</button>
                     </div>
 
                     <div class="form-group col-12">
@@ -530,7 +502,7 @@
 
                     <div class="form-group col-12 d-flex align-items-center">
                         <label class="form-label ml-2" for="annFontNumber">Font Scaling</label>
-                        <input id="annFontNumber" class="form-control ml-2" type="number" min="0.5" max="3" step=".25"
+                        <input id="annFontNumber" class="form-control" type="number" min="0.5" max="3" step=".25"
                             value="1" disabled>
                     </div>
 
@@ -661,12 +633,12 @@
 
 
                 <div id="fileCard" class="tab-pane">
-                    <div class="modal-body" style="width: 370px;">
+                    <div class="modal-body" style="width: 400px; margin-left: -20px;">
                         <table class="table table-bordered sticky-header" style="width: 100%; table-layout: fixed;">
                             <thead>
                                 <tr>
-                                    <th scope="col">File Name</th>
-                                    <th scope="col">Tag</th>
+                                    <th scope="col" style="width: 120px;">File Name</th>
+                                    <th scope="col" style="width: 60px;">Tag</th>
                                     <th scope="col">Tools</th>
                                 </tr>
                             </thead>
