--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -905,7 +905,7 @@
                                     <!-- 左侧按钮和控制 -->
                                     <div class="d-flex">
                                         <div id="arrowControls" class="form-group mb-2 d-flex justify-content-center"
-                                            style="flex: 3;">
+                                            style="flex: 4; margin-left: 20px;">
                                             <button id="stepBackBtn" class="cust-full" type="button" disabled><i
                                                     class="mx-1 fa-lg fas fa-step-backward"></i></button>
                                             <button id="backBtn" class="cust-full" type="button" disabled><i
@@ -916,17 +916,14 @@
                                                     class="mx-1 fa-lg fas fa-step-forward"></i></button>
                                         </div>
 
-                                        <div id="sliceDiv" class="form-group mb-2 d-flex align-items-center"
-                                            style="flex: 1;">
+                                        <div id="sliceDiv" class="form-group mb-2 d-flex align-items-center">
                                             <label for="sliceInput" class="mb-0" style="margin-right: 10px;">Slice
                                                 Navigator:</label>
                                             <input id="sliceInput" class="form-control" type="number" max="700"
                                                 disabled>
                                         </div>
 
-
-
-                                        <div id="sliderDiv" class="form-group mb-2" style="flex: 1;">
+                                        <div id="sliderDiv" class="form-group mb-2" style="flex: 2; margin-left: 20px;">
                                             <input id="sliceRange" class="form-control-range mt-3" type="range"
                                                 disabled>
                                         </div>
