--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -424,11 +424,6 @@
                         </div>
 
                         <div class="form-group col-12">
-                            <!-- <select id="planeSelect">
-                                <option value="xy">XY Plane</option>
-                                <option value="xz">XZ Plane</option>
-                                <option value="yz">YZ Plane</option>
-                            </select> -->
                             <button id="measureBtn" type="button" class="btn btn-custom btn-measure mr-1"
                                 disabled>Measure</button>
                             <button id="measureClearBtn" type="button" class="btn btn-custom btn-clear mr-1"
@@ -475,8 +470,10 @@
                 <div id="annCard" class="card-body tab-pane">
 
                     <div class="form-group col-12 d-flex justify-content-between">
-                        <button id="createAnnBtn" type="button" class="btn btn-secondary" disabled>Create Annotations</button>
-                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary" disabled>Hide Annotations</button>
+                        <button id="createAnnBtn" type="button" class="btn btn-secondary" disabled>Create
+                            Annotations</button>
+                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary" disabled>Hide
+                            Annotations</button>
                     </div>
 
                     <div class="form-group col-12">
@@ -501,10 +498,17 @@
                     </div>
 
                     <div class="form-group col-12 d-flex align-items-center">
-                        <label class="form-label ml-2" for="annFontNumber">Font Scaling</label>
-                        <input id="annFontNumber" class="form-control" type="number" min="0.5" max="3" step=".25"
-                            value="1" disabled>
+                        <label for="annFontNumber" style="margin-right: 10px;">Font Scaling</label>
+                        <input id="annFontNumber" style="width: 150px;" class="form-control" type="number" min="0.5"
+                            max="3" step=".25" value="1" disabled>
                     </div>
+
+                    <!-- <div id="sliceDiv" class="form-group mb-2 d-flex align-items-center">
+                        <label for="sliceInput" class="mb-0" style="margin-right: 10px;">Slice
+                            Navigator:</label>
+                        <input id="sliceInput" class="form-control" type="number" max="700"
+                            disabled>
+                    </div> -->
 
                 </div>
 
@@ -824,8 +828,7 @@
                                         <canvas id="c"></canvas>
                                     </div>
                                     <div id="toolbars" class="height: 160px">
-                                        <form class="form-inline" onSubmit="return false;"
-                                            style="display: flex; flex-wrap: nowrap; gap: 0.5rem;">
+                                        <form class="form-inline" onSubmit="return false;">
                                             <div class="form-group">
                                                 <label class="form-check-label mr-1" for="zLockCheckbox">Z Lock:
                                                     <i class="fas fa-info-circle d-none" data-toggle="popover"
@@ -833,6 +836,7 @@
                                                         data-content="The 3D viewer will clip at the Z slice selected in the 2D viewer"></i>&nbsp;</label>
                                                 <input class="form-check-input" type="checkbox" id="zLockCheckbox"
                                                     checked>
+
                                             </div>
                                             <div class="form-group">
                                                 <label for="zSliceInput">Z Clip:
@@ -841,16 +845,12 @@
                                                 </label>
                                                 <input id="zSliceInput" class="mx-1 form-control" step="1" type="number"
                                                     max="700" disabled>
-                                            </div>
-                                            <div class="form-group">
                                                 <label for="ySliceInput">Y Clip:
                                                     <input class="form-check-input ml-1" type="checkbox"
                                                         id="clipYCheckbox" disabled>
                                                 </label>
                                                 <input id="ySliceInput" class="mx-1 form-control" step="4" type="number"
                                                     disabled>
-                                            </div>
-                                            <div class="form-group">
                                                 <label for="ySliceInput">X Clip:
                                                     <input class="form-check-input ml-1" type="checkbox"
                                                         id="clipXCheckbox" disabled>
@@ -869,16 +869,14 @@
                                                 <label for="opacity" class="ml-1">Opacity</label>
                                                 <input type="range" class="ml-1" id="opacity" min="0" max="10" step=".1"
                                                     value="10">
-                                            </div>
-                                            <div class="form-group">
                                                 <input class="form-check-input ml-1" type="checkbox" id="edgesCheckbox">
                                                 <label class="form-check-label ml-1" for="edgesCheckbox">Bounding
                                                     Box</label>
+                                                <button id="3dFullIconBtn" class="btn btn-primary" type="button"
+                                                    disabled>
+                                                    <i class="fas fa-expand"></i>&nbsp Fullscreen&nbsp3D
+                                                </button>
                                             </div>
-                                            <button id="3dFullIconBtn" class="btn btn-primary" type="button"
-                                                style="margin-left: 0.5rem;" disabled>
-                                                <i class="fas fa-expand"></i>&nbsp Fullscreen&nbsp3D
-                                            </button>
                                         </form>
                                     </div>
                                     <div id="vrOverlayDiv"
