--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -468,7 +468,6 @@
                 </div>
 
                 <div id="annCard" class="card-body tab-pane">
-
                     <div class="form-group col-12 d-flex justify-content-between">
                         <button id="createAnnBtn" type="button" class="btn btn-secondary" disabled>Create
                             Annotations</button>
@@ -509,12 +508,10 @@
                         <input id="sliceInput" class="form-control" type="number" max="700"
                             disabled>
                     </div> -->
-
                 </div>
 
                 <div id="viewCard" class="card-body tab-pane">
-                    <p>This will save the camera viewport, slice, and image type to be able to return to.
-                    </p>
+                    <p>This will save the camera viewport, slice, and image type to be able to return to.</p>
                     <form onSubmit="return false;">
                         <div class="form-row">
                             <div class="col">
@@ -647,6 +644,7 @@
                                 </tr>
                             </thead>
                         </table>
+                        
                         <div style="max-height: 280px; overflow-y: auto;">
                             <table class="table table-bordered sticky-header" style="width: 100%; table-layout: fixed;">
                                 <tbody id="fileMTbody">
